completed JWT TOKEN GENERATION v-6

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL="mongodb+srv://srinuy8055:srinu427452@cluster0.1lbdwrx.mongodb.net/Suby?retryWrites=true&w=majority&appName=Cluster0"
+whatIsYourName="MyNameIsSrinu"
